style: 게임 메타데이터 테스트 형식 정리